adj other features

--- a/other_hand_features/other_models_from_hand_feats_v3_no_help.ipynb
+++ b/other_hand_features/other_models_from_hand_feats_v3_no_help.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -53,13 +53,14 @@
     "        tmp_feat = []\n",
     "        img1 = np.array(row['band_1']).reshape(75, 75).astype('float32')\n",
     "        img2 = np.array(row['band_2']).reshape(75, 75).astype('float32')\n",
+    "        img3 = (img1 + img2)/2\n",
     "        if row['inc_angle'] == 'na':\n",
     "            ang = 0\n",
     "        else:\n",
     "            ang = float(row['inc_angle'])\n",
     "            \n",
     "        # base\n",
-    "        st_trans = get_img_feat(img1) + get_img_feat(img2) + [ang] \n",
+    "        st_trans = get_img_feat(img1) + get_img_feat(img2) + get_img_feat(img3) + [ang] \n",
     "        tmp_feat += st_trans\n",
     "        tmp_feat += [x * y for x, y in combinations(st_trans, 2)]\n",
     "        tmp_feat += [x + y for x, y in combinations(st_trans, 2)]\n",
@@ -68,14 +69,18 @@
     "        # lap\n",
     "        lap_1 = laplace(img1, mode='reflect', cval=0.0)\n",
     "        lap_2 = laplace(img2, mode='reflect', cval=0.0)\n",
-    "        st_trans = get_img_feat(lap_1) + get_img_feat(lap_2)\n",
+    "        lap_3 = laplace(img3, mode='reflect', cval=0.0)\n",
+    "        st_trans = get_img_feat(lap_1) + get_img_feat(lap_2) + get_img_feat(lap_3)\n",
     "        \n",
     "        # sob\n",
     "        sob1 = sobel(img1, axis=0, mode='reflect', cval=0.0)\n",
     "        sob2 = sobel(img1, axis=1, mode='reflect', cval=0.0)\n",
     "        sob3 = sobel(img2, axis=0, mode='reflect', cval=0.0)\n",
     "        sob4 = sobel(img2, axis=1, mode='reflect', cval=0.0)\n",
+    "        sob5 = sobel(img3, axis=0, mode='reflect', cval=0.0)\n",
+    "        sob6 = sobel(img3, axis=1, mode='reflect', cval=0.0)\n",
     "        st_trans = st_trans + get_img_feat(sob1) + get_img_feat(sob2) + get_img_feat(sob3) + get_img_feat(sob4)\n",
+    "        st_trans = st_trans + get_img_feat(sob5) + get_img_feat(sob6)\n",
     "        tmp_feat += st_trans\n",
     "        \n",
     "        # hist\n",
@@ -84,6 +89,10 @@
     "        tmp_feat += [np.std(hist), np.max(hist), np.median(hist), (np.max(hist) - np.median(hist))]\n",
     "        \n",
     "        hist = list(np.histogram(img2, bins=20)[0])\n",
+    "        tmp_feat += hist\n",
+    "        tmp_feat += [np.std(hist), np.max(hist), np.median(hist), (np.max(hist) - np.median(hist))]\n",
+    "        \n",
+    "        hist = list(np.histogram(img3, bins=20)[0])\n",
     "        tmp_feat += hist\n",
     "        tmp_feat += [np.std(hist), np.max(hist), np.median(hist), (np.max(hist) - np.median(hist))]\n",
     "        feats.append(tmp_feat)\n",
@@ -96,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1604, 254) (8424, 254)\n"
+      "(1604, 493) (8424, 493)\n"
      ]
     }
    ],
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -187,37 +196,32 @@
       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
       "          verbose=0, warm_start=False)\n",
-      "this fold train loss 0.185822796799 val loss 0.331947348435\n",
+      "this fold train loss 0.144876200595 val loss 0.361868364692\n",
       "============================\n",
-      "this fold train loss 0.186782768981 val loss 0.305296460271\n",
+      "this fold train loss 0.148391356691 val loss 0.365346893886\n",
       "============================\n",
-      "this fold train loss 0.199407507694 val loss 0.224121789703\n",
+      "this fold train loss 0.167208677689 val loss 0.193670177927\n",
       "============================\n",
-      "this fold train loss 0.191575720862 val loss 0.295246226774\n",
+      "this fold train loss 0.140235635263 val loss 0.429489179487\n",
       "============================\n",
-      "this fold train loss 0.181689085074 val loss 0.380036359838\n",
+      "this fold train loss 0.142843200207 val loss 0.418051705378\n",
       "============================\n",
-      "this fold train loss 0.184951676094 val loss 0.331676663977\n",
-      "============================\n",
-      "all avg 0.188371592584 0.311387474833\n"
+      "all avg 0.148711014089 0.353685264274\n"
      ]
     }
    ],
    "source": [
     "# lr\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "lr_train,lr_pred = cv_feat(LogisticRegression,\n",
-    "                           fold_cnt=6,\n",
-    "                           rnd=1,\n",
-    "                           params={'C':2.0,'max_iter':100})\n",
+    "lr_train,lr_pred = cv_feat(LogisticRegression,fold_cnt=5,params={'C':2.0,'max_iter':100})\n",
     "import pickle\n",
-    "with open('../features/other_model_lr.pkl','wb') as fout:\n",
+    "with open('../features/other_model_lr3.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -230,17 +234,17 @@
       "            min_samples_leaf=1, min_samples_split=2,\n",
       "            min_weight_fraction_leaf=0.0, n_estimators=50, n_jobs=1,\n",
       "            oob_score=False, random_state=42, verbose=0, warm_start=False)\n",
-      "this fold train loss 0.135653483359 val loss 0.311216376663\n",
+      "this fold train loss 0.120126313925 val loss 0.2936809979\n",
       "============================\n",
-      "this fold train loss 0.133297060247 val loss 0.311198371769\n",
+      "this fold train loss 0.122748232456 val loss 0.296912808996\n",
       "============================\n",
-      "this fold train loss 0.133823272904 val loss 0.263660888302\n",
+      "this fold train loss 0.127886004863 val loss 0.254783445403\n",
       "============================\n",
-      "this fold train loss 0.132259572624 val loss 0.291543367585\n",
+      "this fold train loss 0.1174082328 val loss 0.287328474347\n",
       "============================\n",
-      "this fold train loss 0.13219652879 val loss 0.312446838588\n",
+      "this fold train loss 0.12031557239 val loss 0.287901754522\n",
       "============================\n",
-      "all avg 0.133445983585 0.298013168581\n"
+      "all avg 0.121696871287 0.284121496234\n"
      ]
     }
    ],
@@ -251,15 +255,14 @@
     "    'max_depth':10,\n",
     "    'random_state':42\n",
     "}\n",
-    "lr_train,lr_pred = cv_feat(RandomForestClassifier,fold_cnt=5,\n",
-    "                           params=tmp_params)\n",
-    "with open('../features/other_model_rf.pkl','wb') as fout:\n",
+    "lr_train,lr_pred = cv_feat(RandomForestClassifier,fold_cnt=5,params=tmp_params)\n",
+    "with open('../features/other_model_rf3.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -277,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -289,39 +292,37 @@
       "              max_features=None, max_leaf_nodes=None,\n",
       "              min_impurity_decrease=0.0, min_impurity_split=None,\n",
       "              min_samples_leaf=1, min_samples_split=2,\n",
-      "              min_weight_fraction_leaf=0.0, n_estimators=300,\n",
+      "              min_weight_fraction_leaf=0.0, n_estimators=200,\n",
       "              presort='auto', random_state=42, subsample=1.0, verbose=0,\n",
       "              warm_start=False)\n",
-      "this fold train loss 0.0215586164505 val loss 0.289194855681\n",
+      "this fold train loss 0.0401790279744 val loss 0.265526443499\n",
       "============================\n",
-      "this fold train loss 0.0219319527599 val loss 0.230133139043\n",
+      "this fold train loss 0.0421715707481 val loss 0.224438066165\n",
       "============================\n",
-      "this fold train loss 0.0258252686689 val loss 0.17422607186\n",
+      "this fold train loss 0.0474347214469 val loss 0.177007093279\n",
       "============================\n",
-      "this fold train loss 0.0191698871505 val loss 0.224279135102\n",
+      "this fold train loss 0.0395962294178 val loss 0.216851814365\n",
       "============================\n",
-      "this fold train loss 0.0195523763446 val loss 0.263894844966\n",
+      "this fold train loss 0.0379853451897 val loss 0.259199549207\n",
       "============================\n",
-      "all avg 0.0216076202749 0.23634560933\n"
+      "all avg 0.0414733789554 0.228604593303\n"
      ]
     }
    ],
    "source": [
     "tmp_params = {\n",
-    "    'n_estimators':300,\n",
+    "    'n_estimators':200,\n",
     "    'learning_rate':0.1,\n",
     "    'random_state':42,\n",
     "}\n",
-    "lr_train,lr_pred = cv_feat(GradientBoostingClassifier,fold_cnt=5,\n",
-    "                           rnd=1,\n",
-    "                           params=tmp_params)\n",
-    "with open('../features/other_model_gbrt.pkl','wb') as fout:\n",
+    "lr_train,lr_pred = cv_feat(GradientBoostingClassifier,fold_cnt=5,params=tmp_params)\n",
+    "with open('../features/other_model_gbrt3.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -334,17 +335,17 @@
       "       n_jobs=1, nthread=None, objective='binary:logistic', random_state=0,\n",
       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
       "       silent=True, subsample=1)\n",
-      "this fold train loss 0.0449788980772 val loss 0.273746081482\n",
+      "this fold train loss 0.0329529985874 val loss 0.255709478286\n",
       "============================\n",
-      "this fold train loss 0.0476104208943 val loss 0.237838637325\n",
+      "this fold train loss 0.0370144478323 val loss 0.230055434636\n",
       "============================\n",
-      "this fold train loss 0.0492733710688 val loss 0.175999403349\n",
+      "this fold train loss 0.0384466781268 val loss 0.168870448389\n",
       "============================\n",
-      "this fold train loss 0.0444674012068 val loss 0.222329032978\n",
+      "this fold train loss 0.0351772871207 val loss 0.216290700139\n",
       "============================\n",
-      "this fold train loss 0.0417808146803 val loss 0.258001860328\n",
+      "this fold train loss 0.0311763129352 val loss 0.246747610231\n",
       "============================\n",
-      "all avg 0.0456221811855 0.233583003093\n"
+      "all avg 0.0349535449205 0.223534734336\n"
      ]
     }
    ],
@@ -356,16 +357,14 @@
     "    'min_child_weight':1,\n",
     "    \n",
     "}\n",
-    "lr_train,lr_pred = cv_feat(XGBClassifier,fold_cnt=5,\n",
-    "                           rnd=1,\n",
-    "                           params=tmp_params)\n",
-    "with open('../features/other_model_xgb.pkl','wb') as fout:\n",
+    "lr_train,lr_pred = cv_feat(XGBClassifier,fold_cnt=5,params=tmp_params)\n",
+    "with open('../features/other_model_xgb3.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -376,8 +375,8 @@
      "text": [
       "LGBMClassifier(boosting_type='gbdt', colsample_bytree=1.0, learning_rate=0.1,\n",
       "        max_bin=255, max_depth=3, min_child_samples=20,\n",
-      "        min_child_weight=0.001, min_split_gain=0, n_estimators=500,\n",
-      "        n_jobs=-1, num_leaves=32, objective=None, random_state=None,\n",
+      "        min_child_weight=0.001, min_split_gain=0.0, n_estimators=200,\n",
+      "        n_jobs=-1, num_leaves=31, objective=None, random_state=None,\n",
       "        reg_alpha=0.0, reg_lambda=0.0, silent=True, subsample=1.0,\n",
       "        subsample_for_bin=200000, subsample_freq=1)\n"
      ]
@@ -396,7 +395,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.00192976533855 val loss 0.363178706573\n",
+      "this fold train loss 0.0281136680849 val loss 0.269864855251\n",
       "============================\n"
      ]
     },
@@ -414,7 +413,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.00316270625065 val loss 0.299681397701\n",
+      "this fold train loss 0.0324313124827 val loss 0.234726841288\n",
       "============================\n"
      ]
     },
@@ -432,7 +431,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0030037278498 val loss 0.20003011595\n",
+      "this fold train loss 0.0332933274586 val loss 0.178377831445\n",
       "============================\n"
      ]
     },
@@ -450,7 +449,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.00243354888761 val loss 0.26865302494\n",
+      "this fold train loss 0.0289990992101 val loss 0.225836234432\n",
       "============================\n"
      ]
     },
@@ -468,9 +467,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.00209312408665 val loss 0.351565288614\n",
+      "this fold train loss 0.0287024773518 val loss 0.250443071345\n",
       "============================\n",
-      "all avg 0.00252457448265 0.296621706756\n"
+      "all avg 0.0303079769176 0.231849766752\n"
      ]
     }
    ],
@@ -478,15 +477,10 @@
     "from lightgbm import LGBMClassifier\n",
     "tmp_params = {\n",
     "    'max_depth':3,  \n",
-    "    'n_estimators':500,\n",
-    "    'num_leaves':32,\n",
-    "    'max_bin':255,\n",
-    "    'min_split_gain':0\n",
+    "    'n_estimators':200\n",
     "}\n",
-    "lr_train,lr_pred = cv_feat(LGBMClassifier,fold_cnt=5,\n",
-    "                           rnd=1,\n",
-    "                           params=tmp_params)\n",
-    "with open('../features/other_model_lgb.pkl','wb') as fout:\n",
+    "lr_train,lr_pred = cv_feat(LGBMClassifier,fold_cnt=5,params=tmp_params)\n",
+    "with open('../features/other_model_lgb3.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   }
