--- a/other_hand_features/other_models_from_hand_feats_v4.ipynb
+++ b/other_hand_features/other_models_from_hand_feats_v4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,9 +42,12 @@
     "import cv2\n",
     "from itertools import combinations\n",
     "from scipy.ndimage import laplace, sobel\n",
+    "from scipy.stats import kurtosis, skew\n",
     "\n",
-    "def get_img_feat(img):\n",
-    "    feats = [np.mean(img),np.std(img),np.median(img),np.max(img),np.min(img)]\n",
+    "def get_img_feat(img_org):\n",
+    "    img = img_org.ravel()\n",
+    "    feats = [np.mean(img),np.std(img),np.median(img),np.max(img),np.min(img),\n",
+    "             kurtosis(img),skew(img),np.max(img)-np.min(img)]\n",
     "    return feats\n",
     "    \n",
     "def get_other_feat(df):\n",
@@ -53,39 +56,31 @@
     "        tmp_feat = []\n",
     "        img1 = np.array(row['band_1']).reshape(75, 75).astype('float32')\n",
     "        img2 = np.array(row['band_2']).reshape(75, 75).astype('float32')\n",
+    "        \n",
     "        if row['inc_angle'] == 'na':\n",
-    "            ang = 0\n",
+    "            ang = -1\n",
     "        else:\n",
     "            ang = float(row['inc_angle'])\n",
-    "            \n",
-    "        # base\n",
-    "        st_trans = get_img_feat(img1) + get_img_feat(img2) + [ang] \n",
-    "        tmp_feat += st_trans\n",
-    "        tmp_feat += [x * y for x, y in combinations(st_trans, 2)]\n",
-    "        tmp_feat += [x + y for x, y in combinations(st_trans, 2)]\n",
-    "        tmp_feat += [x - y for x, y in combinations(st_trans, 2)]\n",
     "        \n",
-    "        # lap\n",
-    "        lap_1 = laplace(img1, mode='reflect', cval=0.0)\n",
-    "        lap_2 = laplace(img2, mode='reflect', cval=0.0)\n",
-    "        st_trans = get_img_feat(lap_1) + get_img_feat(lap_2)\n",
+    "        feat1 = get_img_feat(img1)\n",
+    "        feat2 = get_img_feat(img2)\n",
+    "        feat_len = len(feat1)\n",
+    "        tmp_feat += feat1 + feat2 + [ang]\n",
+    "        for i in range(feat_len):\n",
+    "            tmp_feat.append(feat1[i]-feat2[i])\n",
+    "            tmp_feat.append(feat1[i]+feat2[i])\n",
+    "        \n",
+    "        lap_1 = laplace(img1, mode='reflect', cval=0.0).var()\n",
+    "        lap_2 = laplace(img2, mode='reflect', cval=0.0).var()\n",
     "        \n",
     "        # sob\n",
-    "        sob1 = sobel(img1, axis=0, mode='reflect', cval=0.0)\n",
-    "        sob2 = sobel(img1, axis=1, mode='reflect', cval=0.0)\n",
-    "        sob3 = sobel(img2, axis=0, mode='reflect', cval=0.0)\n",
-    "        sob4 = sobel(img2, axis=1, mode='reflect', cval=0.0)\n",
-    "        st_trans = st_trans + get_img_feat(sob1) + get_img_feat(sob2) + get_img_feat(sob3) + get_img_feat(sob4)\n",
-    "        tmp_feat += st_trans\n",
+    "        sob1 = sobel(img1, axis=0, mode='reflect', cval=0.0).var()\n",
+    "        sob2 = sobel(img1, axis=1, mode='reflect', cval=0.0).var()\n",
+    "        sob3 = sobel(img2, axis=0, mode='reflect', cval=0.0).var()\n",
+    "        sob4 = sobel(img2, axis=1, mode='reflect', cval=0.0).var()\n",
     "        \n",
-    "        # hist\n",
-    "        hist = list(np.histogram(img1, bins=20)[0])\n",
-    "        tmp_feat += hist\n",
-    "        tmp_feat += [np.std(hist), np.max(hist), np.median(hist), (np.max(hist) - np.median(hist))]\n",
+    "        tmp_feat += [lap_1,lap_2,sob1,sob2,sob3,sob4]\n",
     "        \n",
-    "        hist = list(np.histogram(img2, bins=20)[0])\n",
-    "        tmp_feat += hist\n",
-    "        tmp_feat += [np.std(hist), np.max(hist), np.median(hist), (np.max(hist) - np.median(hist))]\n",
     "        feats.append(tmp_feat)\n",
     "        \n",
     "    return np.array(feats).astype('float32')\n",
@@ -96,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1604, 254) (8424, 254)\n"
+      "(1604, 39) (8424, 39)\n"
      ]
     }
    ],
@@ -113,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -187,19 +182,19 @@
       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
       "          verbose=0, warm_start=False)\n",
-      "this fold train loss 0.185822796799 val loss 0.331947348435\n",
+      "this fold train loss 0.287731041382 val loss 0.262732928163\n",
       "============================\n",
-      "this fold train loss 0.186782768981 val loss 0.305296460271\n",
+      "this fold train loss 0.27989720333 val loss 0.310595262597\n",
       "============================\n",
-      "this fold train loss 0.199407507694 val loss 0.224121789703\n",
+      "this fold train loss 0.277975666022 val loss 0.311678439165\n",
       "============================\n",
-      "this fold train loss 0.191575720862 val loss 0.295246226774\n",
+      "this fold train loss 0.277803243272 val loss 0.314822358111\n",
       "============================\n",
-      "this fold train loss 0.181689085074 val loss 0.380036359838\n",
+      "this fold train loss 0.281082104942 val loss 0.294895949458\n",
       "============================\n",
-      "this fold train loss 0.184951676094 val loss 0.331676663977\n",
+      "this fold train loss 0.285190185047 val loss 0.276584347618\n",
       "============================\n",
-      "all avg 0.188371592584 0.311387474833\n"
+      "all avg 0.281613240666 0.295218214185\n"
      ]
     }
    ],
@@ -208,16 +203,15 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "lr_train,lr_pred = cv_feat(LogisticRegression,\n",
     "                           fold_cnt=6,\n",
-    "                           rnd=1,\n",
-    "                           params={'C':2.0,'max_iter':100})\n",
+    "                           params={'C':2.0,'max_iter':100},rnd=2)\n",
     "import pickle\n",
-    "with open('../features/other_model_lr.pkl','wb') as fout:\n",
+    "with open('../features/other_model_lr4.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -225,41 +219,44 @@
      "output_type": "stream",
      "text": [
       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-      "            max_depth=10, max_features='auto', max_leaf_nodes=None,\n",
+      "            max_depth=5, max_features='auto', max_leaf_nodes=None,\n",
       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
       "            min_samples_leaf=1, min_samples_split=2,\n",
-      "            min_weight_fraction_leaf=0.0, n_estimators=50, n_jobs=1,\n",
+      "            min_weight_fraction_leaf=0.0, n_estimators=30, n_jobs=1,\n",
       "            oob_score=False, random_state=42, verbose=0, warm_start=False)\n",
-      "this fold train loss 0.135653483359 val loss 0.311216376663\n",
+      "this fold train loss 0.332707916851 val loss 0.416499510302\n",
       "============================\n",
-      "this fold train loss 0.133297060247 val loss 0.311198371769\n",
+      "this fold train loss 0.332503579345 val loss 0.393370767949\n",
       "============================\n",
-      "this fold train loss 0.133823272904 val loss 0.263660888302\n",
+      "this fold train loss 0.331014507639 val loss 0.386497911175\n",
       "============================\n",
-      "this fold train loss 0.132259572624 val loss 0.291543367585\n",
+      "this fold train loss 0.330437118176 val loss 0.371705114631\n",
       "============================\n",
-      "this fold train loss 0.13219652879 val loss 0.312446838588\n",
+      "this fold train loss 0.333927795106 val loss 0.367035762438\n",
       "============================\n",
-      "all avg 0.133445983585 0.298013168581\n"
+      "this fold train loss 0.324476612527 val loss 0.410691940824\n",
+      "============================\n",
+      "this fold train loss 0.331683319328 val loss 0.362861542234\n",
+      "============================\n",
+      "all avg 0.330964406996 0.386951792793\n"
      ]
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier,GradientBoostingClassifier,AdaBoostClassifier\n",
     "tmp_params = {\n",
-    "    'n_estimators':50,\n",
-    "    'max_depth':10,\n",
+    "    'n_estimators':30,\n",
+    "    'max_depth':5,\n",
     "    'random_state':42\n",
     "}\n",
-    "lr_train,lr_pred = cv_feat(RandomForestClassifier,fold_cnt=5,\n",
-    "                           params=tmp_params)\n",
-    "with open('../features/other_model_rf.pkl','wb') as fout:\n",
+    "lr_train,lr_pred = cv_feat(RandomForestClassifier,fold_cnt=7,params=tmp_params)\n",
+    "with open('../features/other_model_rf4.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -277,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -289,39 +286,43 @@
       "              max_features=None, max_leaf_nodes=None,\n",
       "              min_impurity_decrease=0.0, min_impurity_split=None,\n",
       "              min_samples_leaf=1, min_samples_split=2,\n",
-      "              min_weight_fraction_leaf=0.0, n_estimators=300,\n",
+      "              min_weight_fraction_leaf=0.0, n_estimators=230,\n",
       "              presort='auto', random_state=42, subsample=1.0, verbose=0,\n",
       "              warm_start=False)\n",
-      "this fold train loss 0.0215586164505 val loss 0.289194855681\n",
+      "this fold train loss 0.0495707480273 val loss 0.252043622088\n",
       "============================\n",
-      "this fold train loss 0.0219319527599 val loss 0.230133139043\n",
+      "this fold train loss 0.0546954703019 val loss 0.233812466356\n",
       "============================\n",
-      "this fold train loss 0.0258252686689 val loss 0.17422607186\n",
+      "this fold train loss 0.0596918157523 val loss 0.190514160306\n",
       "============================\n",
-      "this fold train loss 0.0191698871505 val loss 0.224279135102\n",
+      "this fold train loss 0.0545535026418 val loss 0.208425240605\n",
       "============================\n",
-      "this fold train loss 0.0195523763446 val loss 0.263894844966\n",
+      "this fold train loss 0.0539377536118 val loss 0.244591307856\n",
       "============================\n",
-      "all avg 0.0216076202749 0.23634560933\n"
+      "all avg 0.054489858067 0.225877359442\n"
      ]
     }
    ],
    "source": [
     "tmp_params = {\n",
-    "    'n_estimators':300,\n",
+    "    'n_estimators':230,\n",
     "    'learning_rate':0.1,\n",
     "    'random_state':42,\n",
+    "    'subsample':1.0,\n",
+    "    'min_samples_leaf':1,\n",
+    "    'max_depth':3\n",
     "}\n",
     "lr_train,lr_pred = cv_feat(GradientBoostingClassifier,fold_cnt=5,\n",
-    "                           rnd=1,\n",
-    "                           params=tmp_params)\n",
-    "with open('../features/other_model_gbrt.pkl','wb') as fout:\n",
+    "                           params=tmp_params,\n",
+    "                           rnd=1\n",
+    "                          )\n",
+    "with open('../features/other_model_gbrt4.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -334,17 +335,17 @@
       "       n_jobs=1, nthread=None, objective='binary:logistic', random_state=0,\n",
       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
       "       silent=True, subsample=1)\n",
-      "this fold train loss 0.0449788980772 val loss 0.273746081482\n",
+      "this fold train loss 0.0760642053151 val loss 0.243601235928\n",
       "============================\n",
-      "this fold train loss 0.0476104208943 val loss 0.237838637325\n",
+      "this fold train loss 0.0804241277613 val loss 0.23459369554\n",
       "============================\n",
-      "this fold train loss 0.0492733710688 val loss 0.175999403349\n",
+      "this fold train loss 0.0826821901988 val loss 0.19195923385\n",
       "============================\n",
-      "this fold train loss 0.0444674012068 val loss 0.222329032978\n",
+      "this fold train loss 0.082669580743 val loss 0.212452242594\n",
       "============================\n",
-      "this fold train loss 0.0417808146803 val loss 0.258001860328\n",
+      "this fold train loss 0.0765358782398 val loss 0.244702244014\n",
       "============================\n",
-      "all avg 0.0456221811855 0.233583003093\n"
+      "all avg 0.0796751964516 0.225461730385\n"
      ]
     }
    ],
@@ -354,18 +355,19 @@
     "    'n_estimators':200,\n",
     "    'colsample_bytree':1,\n",
     "    'min_child_weight':1,\n",
+    "    'learning_rate':0.1,\n",
+    "\n",
     "    \n",
     "}\n",
     "lr_train,lr_pred = cv_feat(XGBClassifier,fold_cnt=5,\n",
-    "                           rnd=1,\n",
-    "                           params=tmp_params)\n",
-    "with open('../features/other_model_xgb.pkl','wb') as fout:\n",
+    "                           params=tmp_params,rnd=1)\n",
+    "with open('../features/other_model_xgb4.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 99,
    "metadata": {
     "scrolled": false
    },
@@ -376,8 +378,8 @@
      "text": [
       "LGBMClassifier(boosting_type='gbdt', colsample_bytree=1.0, learning_rate=0.1,\n",
       "        max_bin=255, max_depth=3, min_child_samples=20,\n",
-      "        min_child_weight=0.001, min_split_gain=0, n_estimators=500,\n",
-      "        n_jobs=-1, num_leaves=32, objective=None, random_state=None,\n",
+      "        min_child_weight=0.001, min_split_gain=0.0, n_estimators=200,\n",
+      "        n_jobs=-1, num_leaves=31, objective=None, random_state=None,\n",
       "        reg_alpha=0.0, reg_lambda=0.0, silent=True, subsample=1.0,\n",
       "        subsample_for_bin=200000, subsample_freq=1)\n"
      ]
@@ -396,7 +398,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.00192976533855 val loss 0.363178706573\n",
+      "this fold train loss 0.0675601854902 val loss 0.25630813982\n",
       "============================\n"
      ]
     },
@@ -414,7 +416,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.00316270625065 val loss 0.299681397701\n",
+      "this fold train loss 0.0767522518115 val loss 0.235380362336\n",
       "============================\n"
      ]
     },
@@ -432,7 +434,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0030037278498 val loss 0.20003011595\n",
+      "this fold train loss 0.0790560033704 val loss 0.199976805237\n",
       "============================\n"
      ]
     },
@@ -450,7 +452,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.00243354888761 val loss 0.26865302494\n",
+      "this fold train loss 0.0810209224713 val loss 0.225123786418\n",
       "============================\n"
      ]
     },
@@ -468,9 +470,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.00209312408665 val loss 0.351565288614\n",
+      "this fold train loss 0.0732322664606 val loss 0.248995267605\n",
       "============================\n",
-      "all avg 0.00252457448265 0.296621706756\n"
+      "all avg 0.0755243259208 0.233156872283\n"
      ]
     }
    ],
@@ -478,15 +480,12 @@
     "from lightgbm import LGBMClassifier\n",
     "tmp_params = {\n",
     "    'max_depth':3,  \n",
-    "    'n_estimators':500,\n",
-    "    'num_leaves':32,\n",
-    "    'max_bin':255,\n",
-    "    'min_split_gain':0\n",
+    "    'n_estimators':200,\n",
+    "    'min_child_samples':20,\n",
+    "    #'reg_lambda':0.1,\n",
     "}\n",
-    "lr_train,lr_pred = cv_feat(LGBMClassifier,fold_cnt=5,\n",
-    "                           rnd=1,\n",
-    "                           params=tmp_params)\n",
-    "with open('../features/other_model_lgb.pkl','wb') as fout:\n",
+    "lr_train,lr_pred = cv_feat(LGBMClassifier,fold_cnt=5,params=tmp_params)\n",
+    "with open('../features/other_model_lgb4.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   }
