--- a/other_hand_features/prepare_other_feat.ipynb
+++ b/other_hand_features/prepare_other_feat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -41,15 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cv2\n",
     "from scipy.ndimage import laplace, sobel\n",
+    "from scipy.stats import kurtosis, skew\n",
     "\n",
     "def get_img_feat(img):\n",
     "    feats = [np.mean(img),np.std(img),np.median(img),np.max(img),np.min(img)]\n",
@@ -66,25 +65,9 @@
     "            ang = 0\n",
     "        else:\n",
     "            ang = float(row['inc_angle'])\n",
-    "        tmp_feat = get_img_feat(img1)+get_img_feat(img2)+[ang]\n",
+    "        tmp_feat = get_img_feat(img1) + get_img_feat(img2) + [ang]\n",
     "        \n",
-    "#         lap_1 = laplace(img1, mode='reflect', cval=0.0)\n",
-    "#         lap_2 = laplace(img1, mode='reflect', cval=0.0)\n",
-    "#         tmp_feat = tmp_feat + get_img_feat(lap_1) + get_img_feat(lap_2)\n",
     "        \n",
-    "#         sob1 = sobel(img1, axis=0, mode='reflect', cval=0.0)\n",
-    "#         sob2 = sobel(img1, axis=1, mode='reflect', cval=0.0)\n",
-    "#         sob3 = sobel(img2, axis=0, mode='reflect', cval=0.0)\n",
-    "#         sob4 = sobel(img2, axis=1, mode='reflect', cval=0.0)\n",
-    "#         tmp_feat = tmp_feat + get_img_feat(sob1) + get_img_feat(sob2) + get_img_feat(sob3) + get_img_feat(sob4)\n",
-    "        \n",
-    "#         hist = list(np.histogram(img1, bins=20)[0])\n",
-    "#         tmp_feat += hist\n",
-    "#         tmp_feat += [np.std(hist), np.max(hist), np.median(hist), (np.max(hist) - np.median(hist))]\n",
-    "        \n",
-    "#         hist = list(np.histogram(img2, bins=20)[0])\n",
-    "#         tmp_feat += hist\n",
-    "#         tmp_feat += [np.std(hist), np.max(hist), np.median(hist), (np.max(hist) - np.median(hist))]\n",
     "        feats.append(tmp_feat)\n",
     "        \n",
     "    return np.array(feats).astype('float32')\n",
@@ -95,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +109,7 @@
        "(1604, 11)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +129,7 @@
        "dtype('float32')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
