--- a/other_hand_features/other_models_from_hand_feats_v2.ipynb
+++ b/other_hand_features/other_models_from_hand_feats_v2.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,10 @@
    "source": [
     "# lr\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "lr_train,lr_pred = cv_feat(LogisticRegression,fold_cnt=5,params={'C':2.0,'max_iter':100})\n",
+    "lr_train,lr_pred = cv_feat(LogisticRegression,\n",
+    "                           fold_cnt=5,\n",
+    "                           rnd=1,\n",
+    "                           params={'C':2.0,'max_iter':100})\n",
     "import pickle\n",
     "with open('../features/other_model_lr2.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
@@ -214,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +251,9 @@
     "    'max_depth':10,\n",
     "    'random_state':42\n",
     "}\n",
-    "lr_train,lr_pred = cv_feat(RandomForestClassifier,fold_cnt=5,params=tmp_params)\n",
+    "lr_train,lr_pred = cv_feat(RandomForestClassifier,fold_cnt=5,\n",
+    "                           rnd=1,\n",
+    "                           params=tmp_params)\n",
     "with open('../features/other_model_rf2.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
@@ -273,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -285,26 +290,26 @@
       "              max_features=None, max_leaf_nodes=None,\n",
       "              min_impurity_decrease=0.0, min_impurity_split=None,\n",
       "              min_samples_leaf=1, min_samples_split=2,\n",
-      "              min_weight_fraction_leaf=0.0, n_estimators=200,\n",
+      "              min_weight_fraction_leaf=0.0, n_estimators=500,\n",
       "              presort='auto', random_state=42, subsample=1.0, verbose=0,\n",
       "              warm_start=False)\n",
-      "this fold train loss 0.0454135956711 val loss 0.237516215916\n",
+      "this fold train loss 0.00538217353621 val loss 0.262754245818\n",
       "============================\n",
-      "this fold train loss 0.0487403695001 val loss 0.240573039121\n",
+      "this fold train loss 0.00629780179347 val loss 0.257350402834\n",
       "============================\n",
-      "this fold train loss 0.0498461610381 val loss 0.211853511021\n",
+      "this fold train loss 0.00590146581619 val loss 0.250531816604\n",
       "============================\n",
-      "this fold train loss 0.0448649362767 val loss 0.201027198467\n",
+      "this fold train loss 0.00501798708689 val loss 0.223542546626\n",
       "============================\n",
-      "this fold train loss 0.0450830963909 val loss 0.252077266824\n",
+      "this fold train loss 0.00531041430817 val loss 0.293378876565\n",
       "============================\n",
-      "all avg 0.0467896317754 0.22860944627\n"
+      "all avg 0.00558196850819 0.25751157769\n"
      ]
     }
    ],
    "source": [
     "tmp_params = {\n",
-    "    'n_estimators':200,\n",
+    "    'n_estimators':500,\n",
     "    'learning_rate':0.1,\n",
     "    'random_state':42,\n",
     "}\n",
@@ -315,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {
     "scrolled": false
    },
@@ -366,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LGBMClassifier(boosting='dart', boosting_type='gbdt', colsample_bytree=1.0,\n",
+      "LGBMClassifier(boosting='gbrt', boosting_type='gbdt', colsample_bytree=1.0,\n",
       "        learning_rate=0.1, max_bin=255, max_depth=3, min_child_samples=20,\n",
       "        min_child_weight=0.001, min_split_gain=0.0, n_estimators=200,\n",
       "        n_jobs=-1, num_leaves=31, objective=None, random_state=None,\n",
@@ -471,7 +476,7 @@
     "tmp_params = {\n",
     "    'max_depth':3,  \n",
     "    'n_estimators':200,\n",
-    "    'boosting':'dart'\n",
+    "    'boosting':'gbrt'\n",
     "}\n",
     "lr_train,lr_pred = cv_feat(LGBMClassifier,fold_cnt=5,params=tmp_params)\n",
     "with open('../features/other_model_lgb2.pkl','wb') as fout:\n",
